--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>{{ site.data.main_info.name }}</title>
-  <meta name="description" content="Homepage of Junmo Kang">
-  <meta name="author" content="Junmo Kang">
+  <meta name="description" content="Homepage of Tergel Munkhbat">
+  <meta name="author" content="Tergel Munkhbat">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -51,9 +51,9 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href={{ "/assets/icons8-star-32.png" | prepend: site.baseurl }}>
-  <!-- <link rel="shortcut icon" type="image/png" href={{ "/libs/icon.png" | prepend: site.baseurl }}> -->
-
+  <!-- <link rel="icon" type="image/png" href={{ "/libs/icon.png" | prepend: site.baseurl }}>
+  <link rel="shortcut icon" type="image/png" href={{ "/libs/icon.png" | prepend: site.baseurl }}> -->
+  <link rel="shortcut icon" type="image/png" href=/assets/kaist.ico>
 </head>
 <body>
 
@@ -64,17 +64,15 @@
     <section class="header">
       <div class="row">
         <div class="three columns">
-          <div><img class="u-max-full-width" style="border-radius: 1rem;" src='{{ site.baseurl }}{{ site.data.main_info.profile_pic }}'></div>
+          <a href="{{ site.baseurl }}/"><img class="u-max-full-width" src='{{ site.baseurl }}{{ site.data.main_info.profile_pic }}'></a>
         </div>
         <div class="nine columns main-description">
             <h1>{{ site.data.main_info.name }}</h1>
             <p>{{ site.data.main_info.title }}</p>
-            <p>{{ site.data.main_info.dept }}</p>
-            <p>{{ site.data.main_info.office }}</p>
             <p>{{ site.data.main_info.email }}</p>
             <p>
               <span onclick="window.open('{{ site.data.main_info.cv }}')" style="cursor: pointer">
-                <i class="fa ai ai-cv-square" aria-hidden="true"></i>
+                <i class="fa fa-download" aria-hidden="true"></i>
               </span>
               
               <span onclick="window.open('{{ site.data.main_info.semantic_scholar }}')" style="cursor: pointer">
@@ -85,33 +83,17 @@
                 <i class="ai fa ai-google-scholar-square" aria-hidden="true"></i>
               </span>
 
-              <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
-                <i class="fa fa-twitter-square" aria-hidden="true"></i>
-              </span>    
-
-              <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
-                <i class="fa fa-github-square" aria-hidden="true"></i>
-              </span>
-
               <span onclick="window.open('{{ site.data.main_info.linkedin }}')" style="cursor: pointer">
                 <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              </span>
+
+              <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
+                <i class="fa fa-github" aria-hidden="true"></i>
               </span>
             </p>
         </div>
       </div>
     </section>
-
-    <div class="navbar-spacer"></div>
-    <nav class="navbar">
-      <div class="container">
-        <ul class="navbar-list">
-          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#about" | prepend: site.baseurl }}>About</a></li>
-          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#education" | prepend: site.baseurl }}>Education</a></li>
-          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#publications" | prepend: site.baseurl }}>Publications</a></li>
-          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#resume" | prepend: site.baseurl }}>Vitae</a></li>
-        </ul>
-      </div>
-    </nav>
 
     {{ content}}
 
@@ -121,11 +103,14 @@
           {{ site.data.main_info.name }}
         </div>
         <div class="four columns">
-          based on <a href="https://web.media.mit.edu/~msaveski/" style="font-weight: lighter">Martin Saveski</a>'s template
+          Last updated on November 15, 2023
         </div>
         <div class="four columns">
+          <!-- <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+          </span> -->
           <span onclick="window.open('{{ site.data.main_info.cv }}')" style="cursor: pointer">
-            <i class="fa ai ai-cv-square" aria-hidden="true"></i>
+            <i class="fa fa-download" aria-hidden="true"></i>
           </span>
           <span onclick="window.open('{{ site.data.main_info.semantic_scholar }}')" style="cursor: pointer">
             <i class="ai ai-semantic-scholar-square" aria-hidden="true"></i>
@@ -133,14 +118,11 @@
           <span onclick="window.open('{{ site.data.main_info.google_scholar }}')" style="cursor: pointer">
             <i class="ai ai-google-scholar-square" aria-hidden="true"></i>
           </span>
-          <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
-            <i class="fa fa-twitter-square" aria-hidden="true"></i>
-          </span>
-          <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
-            <i class="fa fa-github-square" aria-hidden="true"></i>
-          </span>
           <span onclick="window.open('{{ site.data.main_info.linkedin }}')" style="cursor: pointer">
             <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+          </span>
+          <span onclick="window.open('{{ site.data.main_info.github }}')" style="cursor: pointer">
+            <i class="fa fa-github" aria-hidden="true"></i>
           </span>
         </div>
       </div>
