--- a/libs/external/timeline.css
+++ b/libs/external/timeline.css
@@ -95,7 +95,7 @@
   margin-top: -10px;
   background: #fff;
   border-radius: 10px;
-  border: 4px solid darksalmon;
+  border: 4px solid rgb(255,80,80);
   z-index: 10;
 }
 
@@ -136,7 +136,7 @@
   
   line-height: 1em;
   font-size: 0.66666em;
-  color: #46923c;
+  color: rgb(250,80,80);
   vertical-align: middle;
 }
 
@@ -245,7 +245,7 @@
     margin-left: -9px;
     background: #fff;
     border-radius: 10px;
-    border: 4px solid darksalmon;
+    border: 4px solid rgb(255,80,80);
     z-index: 10;
   }
 
