Add the first blog - God led life

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,7 +103,7 @@
           {{ site.data.main_info.name }}
         </div>
         <div class="four columns">
-          Last updated on Sep 23, 2025
+          Last updated on {{ site.time | date: "%b %-d, %Y" }}
         </div>
         <div class="four columns">
           <!-- <span onclick="window.open('{{ site.data.main_info.twitter }}')" style="cursor: pointer">
